<resources>
    <string name="app_name">UnetiTuyenSinhApp</string>
    <string name="helloHeader">Xin chao</string>
    <string name="userNameHeader">Khach</string>
    <string name="hintSearch">Tim Kiem</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="checkin">Checkin</string>
    <string name="cosoHanoi">\t456 - Minh Khai, Hà Nội \n\t218, Ngõ, Lĩnh Nam, Hà Nội \n\tTel: (04) 38621504 </string>
    <string name="gioiThieuTruong">Trường Đại học Kinh tế - Kỹ thuật Công nghiệp được thành lập theo Quyết định số 1206/QĐ-TTg ngày 11 tháng 9 năm 2007 của Thủ tướng Chính phủ, trên cơ sở nâng cấp Trường Cao đẳng Kinh tế Kỹ thuật Công nghiệp I, tiền thân là Trường Trung cấp Kỹ thuật III, được thành lập năm 1956. Trải qua hơn nửa thế kỷ, tập thể lãnh đạo, cán bộ, giáo viên, công nhân, viên chức và học sinh sinh viên của Nhà trường đã bền bỉ phấn đấu, tập trung trí tuệ và sáng tạo, vượt qua mọi khó khăn thử thách để đưa Nhà trường liên tục phát triển bền vững với những thành tích vẻ vang trong sự nghiệp đào tạo, phát triển nguồn nhân lực cho đất nước.\n\nĐể có được những thành quả to lớn của ngày hôm nay, chúng ta không quên nhớ về cội nguồn. Đó là truyền thống 60 năm xây dựng và phát triển.</string>
    <string name="thongtinchung_khoacntt">- Ngành đào tạo: Công nghệ thông tin  \n- Trình độ đào tạo: Đào tạo cử nhân Đại học và Cao đẳng  \n- Loại hình đào tạo: Chính qui</string>
    <string name="lichsu_khoacntt">- Lịch sử hình thành và phát triển:   \n\tKhoa CNTT được thành lập từ năm 2004; tiền thân là tổ môn Tin học của khoa Khoa học Cơ bản. Đến nay khoa đã có 32 giảng viên, trong đó có 1 tiến sĩ; 4 nghiên cứu sinh; 24 thạc sĩ và 3 kỹ thuật viên phòng máy.  \n- Thành tích đã đạt được:   \n\tVới bề dày lịch sử 12 năm phát triển và trưởng thành, với đội ngũ giảng viên giàu nhiệt huyết, đam mê và tận tụy với công việc đến nay khoa Công nghệ thông tin đã nhiều lần được nhận bằng khen của Bộ Công thương về các thành tích xuất sắc trong năm học. Tập thể cán bộ giảng viên trong Khoa đã và đang thực hiện thành công nhiều đề tài nghiên cứu khoa học cấp Bộ và cấp cơ sở; tham gia viết bài và công bố các công trình trong các diễn đàn hội nghị, tạp chí chuyên ngành trong và ngoài nước.</string>
    <string name="chucnang_khoacntt">- Chức năng:\n\n+ Tham mưu cho Hiệu trưởng về xây dựng và tổ chức thực hiện công tác đào tạo ngành Công nghệ thông tin, bồi dưỡng, nghiên cứu khoa học thuộc các chuyên ngành, nghề thuộc Khoa Công nghệ thông tin;\n\n+ Quản lý giáo viên, sinh viên và trang thiết bị dạy học thuộc Khoa.\n\n- Nhiệm vụ:\n\n+ Đào tạo cử nhân Công nghệ thông tin trình độ Đại học và Cao đẳng;\n\n+ Phối hợp với các phòng ban để tham mưu cho nhà trường về định hướng phát triển ngành nghề trong đào tạo;.\n\n+ Tổ chức nghiên cứu đổi mới nội dung, cải tiến phương pháp dạy học nhằm nâng cao chất lượng đào tạo. Tổ chức sinh hoạt chuyên môn và các buổi hội thảo khoa học theo chuyên đề; thực hiện các hoạt động thực nghiệm, các đề tài nghiên cứu khoa học, ứng dụng kỹ thuật, công nghệ vào quá trình giảng dạy;\n\n+ Chủ động quan hệ doanh nghiệp, phối hợp với doanh nghiệp trong công tác xây dựng chương trình, giáo trình; thực hành, thực tập nghề và công tác giải quyết việc làm cho HSSV;\n\n+ Quản lý, sử dụng có hiệu quả cơ sở vật chất, thiết bị; xây dựng các kế hoạch sử dụng, mua sắm bổ sung, bảo trì, sửa chữa thiết bị các phòng thực hành máy vi tính thuộc Khoa quản lý.</string>
    <string name="nangluc_khoacntt">\n- Về công tác đào tạo: Trong suốt những năm qua Khoa đã đào tạo được trên 3000 cử nhân Công nghệ thông tin trình độ Đại học và Cao đẳng. Đội ngũ sinh viện của khoa thường xuyên tham gia và đạt giải cao trong các kỳ thi nghề cấp thành phố và cấp Bộ. Trên 80% sinh viên có việc làm trong vòng 1 năm sau khi tốt nghiệp. Các chương trình đào tạo của Khoa luôn được cập nhật với sự tham gia đóng góp và tài trợ của các doanh nghiệp.n\n- Về công tác nghiên cứu khoa học: Chỉ tính riêng 5 năm gần đây, giảng viên và sinh viên của khoa đã bảo vệ thành công 2 đề tài cấp Bộ, 45 đề tài cấp cơ sở, thực hiện 8 đề tài sinh viên và tổ chức thành công 6 hội thảo khoa học. Ngoài ra còn có trên 30 bài báo được đăng trên các tạp chí chuyên ngành có uy tín trong và ngoài nước. Tỉ lệ các công trình khoa học được ứng dụng vào thực tiễn giảng dạy đạt trên 40.\n\n- Về quan hệ hợp tác đào tạo: Chủ động tìm kiếm đối tác doanh nghiệp; gắn kết với doanh nghiệp trong việc cập nhật chương trình đào tạo; đổi mới phòng thực hành.</string>
    <string name="dinhhuong_khoacntt">\nTrong giai đoạn phát triển sắp tới, Khoa Công nghệ thông tin sẽ tiếp tục phát triển đội ngũ giảng viên ở trình độ cao; đảm bảo cả về số lượng và chất lượng. Mở rộng quy mô và lĩnh vực đào tạo; hoàn thiện hệ thống giáo trình tài liệu trang thiết bị dạy học; khai thác và phát triển hợp tác đào tạo với các trường bạn và các doanh nghiệp nhắm đáp ứng yêu cầu đào tạo nguồn nhân lực CNTT chất lượng cao góp phần khẳng định vị thế và thương hiệu của nhà trường.</string>
    <string name="lienhe_khoacntt">\n- Địa chỉ: Cơ sở Nam Định 353 Trân Hưng Đạo Nam Định;\n\n\tCơ sở Hà Nội: 456 Minh Khai; ngõ 218/296 Lĩnh Nam Hà Nội\n\n- Số điện thoại:.\n\n- Địa chỉ email: khoacntt@uneti.edu.vn</string>
</resources>